<resources>
    <string name="app_name">CarEshipApp</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create account</string>
    <string name="please_choose_your_symptoms">Please Choose Your symptoms</string>
    <string name="symptoms_and_conditions">Symptoms and conditions</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="common_cold">common cold</string>
    <string name="allergies">allergies</string>
    <string name="anxiety">anxiety</string>
    <string name="asthma">asthma</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="account_number">Account number</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvv">CVV</string>
    <string name="complete_payment">Complete payment</string>
    <string name="Card_owner" />
    <string name="card_owner">Card owner</string>
    <string name="hint_search">hint_Search</string>
    <string name="shop_by_category">Shop by category:</string>
    <string name="select_your_medicine">select your medicine</string>
    <string name="post_address">post address</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Confirm your new password</string>
    <string name="zip_code">Zip code</string>
    <string name="email">Type your email</string>
    <string name="send_verification_link">Send verification link</string>
    <string name="medicine_care_ship">carEship</string>
    <string name="search_medicine"> Search for medicine,other products</string>
    <string name="category_list">products by category</string>
    <string name="popular_products">Popular products</string>
    <string name="medicines">Medicines</string>
    <string name="multi_vitamins">Multi vitamins</string>
    <string name="pills_90">90 pills</string>
    <string name="final_price_217">$217</string>
    <string name="test">Test</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="info_detail">Brand name:Mega food</string>
    <string name="product_detail">product detail</string>

    <string name="cameraView">cameraView</string>
    <string name="mm_yy">MM/YY</string>
    <string name="first_slide">Welcome to CarEship</string>
    <string name="second_slide">Choose Your Medicine</string>
    <string name="third_slide">No Contact Delivery</string>
    <string name="description">"Hey!
        Thank you for your interest in careship.
        We are super happy to have you here!
        "</string>
    <string name="description_second">Search for the medicine you want and you will receive it right away!!</string>
    <string name="description_third">Stay well and order your medicine whenever you want!
    It will be delivered to your address</string>
    <string name="autopilot" />
    <string name="Autopilot">Autopilot</string>
    <string name="card_holder">Card holder</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="estimated_delivery">Estimated Delivery:</string>
    <string name="your_payment_was_successful">Your payment was successful</string>
    <string name="order_date">Order date:</string>
    <string name="verification_link_has_been_sent_to_your_email">Verification link has been sent to your email</string>



</resources>