<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".ShopDetail">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@null"/>

    <ImageButton
        android:id="@+id/image_shopping_shop_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:background="@null"
        />
    <ScrollView
        android:id="@+id/scroll_view_shop_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_shopping_shop_details">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_shop_detail"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/vitamins"
                android:layout_gravity="center"
                android:layout_margin="16dp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_shop_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/order_name_product_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi_vitamins"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/order_pills_product_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pills_90"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_below="@id/order_name_product_shop_detail"/>
    <RatingBar
        android:id="@+id/rat_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/order_pills_product_shop_detail"
        style="@style/Widget.AppCompat.RatingBar.Indicator"/>
    <ImageButton
        android:id="@+id/image_add_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:background="@null"/>
    <TextView
        android:id="@+id/order_can_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_margin="6dp"
        android:layout_below="@id/image_add_shop_detail"
        android:layout_alignParentEnd="true"/>
    <ImageButton
        android:id="@+id/image_remove_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_below="@id/order_can_shop_detail"
        android:src="@drawable/ic_baseline_remove_circle_24"
        android:background="@null"/>
    <TextView
        android:id="@+id/order_product_detail"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_detail"
        android:textColor="@color/black"
        android:layout_below="@id/rat_shop_detail"/>

    <TextView
        android:id="@+id/order_info_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_product_detail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/info_detail"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/order_final_price_product_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_price_217"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        android:layout_below="@id/order_info_shop_detail"/>
<Button
    android:id="@+id/btn_add_to_basket"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/add_to_basket"
    android:layout_below="@id/order_final_price_product_shop_detail"
    app:icon="@drawable/ic_baseline_shopping_cart_24"/>




</RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>