<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_product"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardBackgroundColor="@color/dark_blue">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/image_fav_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:background="@null"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/image_product"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/vitamins"
                android:layout_below="@+id/image_fav_product"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/order_name_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi_vitamins"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_below="@id/image_product"
                android:layout_centerHorizontal="true"/>
"<TextView
            android:id="@+id/order_pills_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pills_90"
            android:textColor="@color/black"
            android:layout_below="@id/order_name_product"
            android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/order_final_price_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_price_217"
                android:textColor="@color/black"
                android:layout_margin="6dp"
                android:layout_below="@id/order_pills_product"/>


        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>