<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".MainActivityCreateAccount">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="91dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="279dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Create Account" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="410dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_your_email"
        android:inputType="textWebEmailAddress|textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <EditText
        android:id="@+id/CreatePassword"
        android:layout_width="411dp"
        android:layout_height="71dp"
        android:layout_below="@id/Username"
        android:layout_marginTop="16dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_password"
        android:inputType="textWebPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <EditText
        android:id="@+id/passwordReentry"
        android:layout_width="411dp"
        android:layout_height="66dp"
        android:layout_below="@id/Username"
        android:layout_marginTop="16dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textWebPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreatePassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/CreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordReentry" />


</androidx.constraintlayout.widget.ConstraintLayout>