<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/image_btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_menu_24"
        android:background="@null"
        android:layout_margin ="16dp"
        android:foreground="?attr/selectableItemBackground"/>
    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:src="@drawable/pills"
        android:layout_alignParentEnd="true"/>

        <ScrollView
        android:id="@+id/scroll_view_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_btn_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/medicine_care_ship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/medicine_care_ship"
                android:textSize="42sp"
                android:textColor="@color/dark_blue"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:hintTextColor="@color/dark_blue"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_text_search"
                    android:hint="@string/search_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/dark_blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/category_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/category_list"
                android:textColor="@color/dark_blue" />

            <HorizontalScrollView
                android:id="@+id/horizontal_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <LinearLayout
                    android:id="@+id/linear_layout_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>
            <TextView
                android:id="@+id/popular_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/popular_products"
                android:textColor="@color/dark_blue"/>
            <HorizontalScrollView
                android:id="@+id/horizontal_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
    <LinearLayout
        android:id="@+id/linear_layout_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>


</HorizontalScrollView>

        </LinearLayout>


    </ScrollView>




</RelativeLayout>