<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".shop">

    <ImageButton
        android:id="@+id/image_btn_arrow_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@null"/>
    <TextView
        android:id="@+id/order_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>
    <ImageButton
        android:id="@+id/image_shopping_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:background="@null"
        />
    <ScrollView
        android:id="@+id/scroll_view_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_btn_arrow_shop">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_search_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:hintTextColor="@color/dark_blue"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_text_search_shop"
                    android:hint="@string/search_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/dark_blue" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/dark_blue"
>
                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_product_shop"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/vitamins" />

                    <TextView
                        android:id="@+id/order_name_product_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multi_vitamins"
                        android:textColor="@color/black"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/image_product_shop"/>
                        <TextView
                            android:id="@+id/order_pills_product_shop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pills_90"
                            android:textColor="@color/black"
                            android:layout_toEndOf="@+id/image_product_shop"
                            android:layout_below="@id/order_name_product_shop"/>
                        <ImageButton
                            android:id="@+id/image_fav_product_shop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:src="@drawable/ic_baseline_favorite_border_24"
                            android:background="@null"
                            android:layout_alignParentEnd="true"/>
                        <TextView
                            android:id="@+id/order_final_price_product_shop"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:text="@string/final_price_217"
                            android:textColor="@color/black"
                            android:layout_toEndOf="@id/image_product_shop"
                            android:layout_below="@id/order_pills_product_shop"/>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_shop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_baseline_add_circle_24"
    android:layout_below="@id/image_fav_product_shop"
    android:layout_alignParentEnd="true"
    android:layout_margin="16dp"

    app:backgroundTint="@color/sky_blue"/>


                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>